fix layout problem

--- a/css/showPage.css
+++ b/css/showPage.css
@@ -498,6 +498,7 @@
         position: relative;
         top: -120px;
         left: 300px;
+        width: 600px;
     }
 
 
